# reproduce-ghcjs-servant-client-bug

./: .gitignore  README.md  ghcjs-servant-client.cabal
god/: Main.hs  Main.hs.bak  nd.hs
src/: Main.hs
