name:                ghcjs-servant-client
version:             0.4.2
synopsis:            error reproduction
description:
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari, Sönke Hahn, Julian K. Arni
maintainer:          alpmestan@gmail.com
copyright:           2014 Zalora South East Asia Pte Ltd
category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC >= 7.8
homepage:            http://haskell-servant.github.io/
Bug-reports:         http://github.com/haskell-servant/servant/issues

executable test
    main-is: Main.hs
  build-depends:
      base >=4.7 && <5
    , mtl
    , either
    , exceptions
    , safe
 --   , servant == 0.4.*
    , string-conversions
    , text
    , transformers
    , ghcjs-base
    , ghcjs-prim
    , split
    , case-insensitive
    , primitive
    , aeson >= 0.7
    , attoparsec >= 0.12
    , bytestring == 0.10.*
    , bytestring-conversion == 0.3.*
    , case-insensitive >= 1.2
    , http-media >= 0.4 && < 0.7
    , http-types == 0.8.*
    , text >= 1 && < 2
    , string-conversions >= 0.3 && < 0.5
    , network-uri >= 2.6
  hs-source-dirs: src
  default-language: Haskell2010
  other-extensions: CPP
                  , ConstraintKinds
                  , DataKinds
                  , DeriveDataTypeable
                  , FlexibleInstances
                  , FunctionalDependencies
                  , GADTs
                  , KindSignatures
                  , MultiParamTypeClasses
                  , OverlappingInstances
                  , OverloadedStrings
                  , PolyKinds
                  , QuasiQuotes
                  , RecordWildCards
                  , ScopedTypeVariables
                  , TemplateHaskell
                  , TypeFamilies
                  , TypeOperators
                  , TypeSynonymInstances
                  , UndecidableInstances
  ghc-options: -Wall

